# wasm_project_2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  camera.h  character.h  mat4.h  maths.h  mesh.h  model.h  phys.h  proc.h  shell.cpp  vec2.h  vec3.h  vec4.h
assets/: vertices.h
shaders/: b_light.frag  b_light.vert  planet_shader.frag  planet_shader.vert  shader.frag  shader.vert  shader_2.frag  shader_2.vert  skybox.frag  skybox.vert
